<?xml version="1.0"?>
<package format="2">
  <name>robotiq_2f_85_gripper_visualization</name>
  <version>1.0.0</version>
  <description>Robotiq ARG 2-Finger 85mm model C3 description package</description>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/robotiq</url>
  <author email="daniels.ordonez@gmail.com">Daniel Ordonez</author>
  <maintainer email="daniels.ordonez@gmail.com">Daniel Ordonez</maintainer>
  <maintainer email="ros@robotiq.com">Jean-Philippe Roberge</maintainer>
  <maintainer email="2330834a@student.gla.ac.uk">ubb</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>ur_t42_utils</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
